--- a/debian/control
+++ b/debian/control
@@ -23,6 +23,7 @@ Package: yoyo-installer
 Architecture: any
 Depends: python3,
          python3-tz,
+         python3-requests,
          python3-gi,
          libadwaita-1-0,
          libgnome-desktop-4-2,
